[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Rihito Iijima <licht-e-jima@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
facebook-scraper = "^0.2.19"
fastapi = "^0.63.0"
insta-scrape = "^2.1.2"
uvicorn = "^0.13.4"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
